--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.4",
     "@types/react": "^18.2.66",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
